@@ -1,3 +1,8 @@
+2006-05-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* src/iterators.c (igraph_eit_destroy) : fixed memory leak
+	* src/basic_query.c (igraph_are_connected) : fixed memory leak
+
 2006-05-02  Gabor Csardi  <csardi@kzoo.edu>
 
 	* src/cocitation.c (igraph_cocitation_real) : bug corrected
